Use vars for local variables where it makes code clearer